refactor: 책임 분리와 가독성 개선을 위해 테스트 클래스들 구조 및 이름 변경